// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddModerator renders correctly when adding with suggestions 1`] = `
<div
  data-styleName="add-moderator adding"
>
  <div
    data-styleName="help-text"
  >
    Search here for members to grant moderator powers
  </div>
  <div
    data-styleName="input-row"
  >
    <input
      data-styleName="input"
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Type..."
      type="text"
    />
    <span
      data-styleName="cancel-button"
      onClick={[Function]}
    >
      Cancel
    </span>
    <span
      data-styleName="add-button"
      onClick={[Function]}
    >
      Add
    </span>
  </div>
  <div
    style={
      Object {
        "width": NaN,
      }
    }
  >
    <KeyControlledItemList
      items={
        Array [
          Object {
            "id": 1,
            "name": "Demeter",
          },
          Object {
            "id": 2,
            "name": "Ares",
          },
          Object {
            "id": 1,
            "name": "Hermes",
          },
        ]
      }
      onChange={[Function]}
      theme={Object {}}
    />
  </div>
</div>
`;

exports[`AddModerator renders correctly, and transitions from not adding to adding 1`] = `
<div
  data-styleName="add-moderator add-new"
  onClick={[Function]}
>
  + Add New
</div>
`;

exports[`AddModerator renders correctly, and transitions from not adding to adding 2`] = `
<div
  data-styleName="add-moderator adding"
>
  <div
    data-styleName="help-text"
  >
    Search here for members to grant moderator powers
  </div>
  <div
    data-styleName="input-row"
  >
    <input
      data-styleName="input"
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Type..."
      type="text"
    />
    <span
      data-styleName="cancel-button"
      onClick={[Function]}
    >
      Cancel
    </span>
    <span
      data-styleName="add-button"
      onClick={[Function]}
    >
      Add
    </span>
  </div>
</div>
`;

exports[`ModeratorsSettingsTab renders a list of RemovableListItems and AddModerator 1`] = `
<div>
  <div>
    <RemovableListItem
      confirmMessage="Are you sure you want to remove undefined's moderator powers?"
      item={
        Object {
          "id": 1,
        }
      }
      key="1"
    />
    <RemovableListItem
      confirmMessage="Are you sure you want to remove undefined's moderator powers?"
      item={
        Object {
          "id": 2,
        }
      }
      key="2"
    />
    <RemovableListItem
      confirmMessage="Are you sure you want to remove undefined's moderator powers?"
      item={
        Object {
          "id": 3,
        }
      }
      key="3"
    />
    <RemovableListItem
      confirmMessage="Are you sure you want to remove undefined's moderator powers?"
      item={
        Object {
          "id": 4,
        }
      }
      key="4"
    />
  </div>
  <AddModerator />
</div>
`;

exports[`ModeratorsSettingsTab renders loading if no moderators 1`] = `<Loading />`;
